# travis234

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.appv23.release  Dockerfile.appv231.release  Dockerfile.release  LICENSE  NOTICE.md  PI_HERMES_TRAVIS_CROSS_CHECK_REPORT.md  README.md  package.json  pyproject.toml  rules.md
app/: graph.py  (+3 more)
appV2.2/: LICENSE  NOTICE.md  README.md  package.json  pyproject.toml
appV2.2/appv22/: __init__.py  app.py  cli.py
appV2.2/appv22/agent/: __init__.py  agent.py  agent_loop.py  tool_guardrails.py  types.py
appV2.2/appv22/ai/: __init__.py  env_config.py  event_stream.py  model_resolver.py  models.py  overflow.py  register_builtins.py  stream.py  types.py  validation.py
appV2.2/appv22/coding_agent/: __init__.py  agent_session.py  agent_session_runtime.py  agent_session_services.py  auth_storage.py  bash_executor.py  branch_summarization.py  config.py  experimental.py  export_html.py  extensions.py  model_registry.py  resource_loader.py  session_store.py  settings_manager.py  source_info.py  system_prompt.py
appV2.2/appv22_ui/: __init__.py  cli.py  context_manager.py  events.py  live.py  runtime_adapter.py  session.py  textual_app.py  textual_controller.py  textual_runtime.py  tui_app.py  tui_layout.py  tui_state.py
appV2.2/scripts/: appv22_cli.py  appv22_textual.py  appv22_tui.py  appv22_tui_bridge.py
appV2.2/tests/: test_agent_loop.py  test_ai_appv2_env_provider.py  test_ai_env_config.py  test_ai_event_stream.py  test_ai_faux.py  test_ai_model_resolver.py  test_ai_models.py  test_ai_overflow.py  test_ai_register_builtins.py  test_ai_stream.py  test_ai_types.py  test_ai_validation.py  test_app_integration.py  test_bridge.py  test_cli.py  test_coding_agent.py  test_compaction.py  test_compaction_timing.py  test_live_ui_event_sink.py  test_no_appv21_coupling.py  test_runtime_protection.py  test_tui.py  test_tui_app.py
appV2.3/: Dockerfile.appv23  LICENSE  NOTICE.md  README.md  package.json  pyproject.toml
appV2.3.1/: Dockerfile.appv231  LICENSE  NOTICE.md  README.md  package.json  pyproject.toml
appV2.3.1/appv231/: __init__.py  app.py  cli.py  sandbox_launcher.py
appV2.3.1/evals/: README.md  __init__.py  container_smoke.py  fixtures.py  report.py  run_continuous_sdlc_eval.py  run_sdlc_eval.py  schema.py  scoring.py  session_resume_smoke.py
appV2.3.1/scripts/: appv231_sandbox.py  appv231_tui.py
appV2.3.1/tests/: test_abort_context.py  test_agent_core_boundary.py  test_agent_loop.py  test_agent_runtime_hardening.py  test_ai_appv2_env_provider.py  test_ai_env_config.py  test_ai_event_stream.py  test_ai_faux.py  test_ai_generation_params.py  test_ai_live_model_catalog.py  test_ai_model_resolver.py  test_ai_models.py  test_ai_overflow.py  test_ai_provider_capabilities.py  test_ai_provider_catalog.py  test_ai_register_builtins.py  test_ai_stream.py  test_ai_types.py  test_ai_validation.py  test_app_integration.py  test_auth_storage_hardening.py  test_cli.py  test_coding_agent.py  test_coding_mailbox.py  test_coding_policy.py  test_compaction.py  test_compaction_integration.py  test_compaction_timing.py  test_eval_harness.py  test_eval_trace.py  test_no_appv21_coupling.py  test_output_spool.py  test_process_completions.py  test_process_context.py  test_process_local.py  test_process_output.py  test_process_service.py  test_process_tools.py  test_process_v2_regressions.py  test_provider_control_plane.py  (+13 more)
appV2.3/appv23/: __init__.py  app.py  cli.py  sandbox_launcher.py
appV2.3/scripts/: appv23_sandbox.py  appv23_tui.py
appV2.3/tests/: test_abort_context.py  test_agent_loop.py  test_ai_appv2_env_provider.py  test_ai_env_config.py  test_ai_event_stream.py  test_ai_faux.py  test_ai_model_resolver.py  test_ai_models.py  test_ai_overflow.py  test_ai_provider_catalog.py  test_ai_register_builtins.py  test_ai_stream.py  test_ai_types.py  test_ai_validation.py  test_app_integration.py  test_cli.py  test_coding_agent.py  test_compaction.py  test_compaction_timing.py  test_no_appv21_coupling.py  test_provider_replay_neutrality.py  test_pyproject_dependencies.py  test_sandbox_launcher.py  test_subagents.py  test_tool_execution_modes.py  test_tui.py
(+1071 files in other folders)
