[project]
name = "allthebest"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.28.1",
  "langgraph>=1.2.6",
  "openrouter>=0.10.0",
  "playwright>=1.59",
  "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
