[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travis234"
version = "2.3.1"
description = "Terminal coding agent with persistent sessions and bounded tool execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.23,<5",
  "langgraph>=0.6.0",
  "openrouter>=0.9.1",
  "psutil>=6.1",
  "pydantic>=2.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.59",
]

[project.scripts]
travis234 = "travis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["travis*"]

[tool.setuptools.package-data]
"travis.coding_agent" = ["export_html_assets/vendor/*.js"]
"travis" = ["resources/**/*"]
