[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travis234"
version = "2.3.3"
description = "Terminal coding agent with persistent sessions and bounded tool execution."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "boto3>=1.35,<2",
  "google-auth>=2.35,<3",
  "httpx>=0.27",
  "jsonschema>=4.23,<5",
  "psutil>=6.1",
  "PyYAML>=6,<7",
  "websockets>=15,<17",
  "zstandard>=0.23,<1",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.59",
]

[project.scripts]
travis234 = "travis.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["travis*"]

[tool.setuptools.package-data]
"travis.coding_agent" = ["export_html_assets/vendor/*.js"]
"travis.ai" = ["builtin_models.json"]
"travis" = [
  "resources/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
