[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "appv23"
version = "2.3.0"
description = "Pi-style coding agent with Hermes-style compaction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13,<3.14"
dependencies = [
  "httpx>=0.27",
  "langgraph>=0.6.0",
  "openrouter>=0.9.1",
  "playwright>=1.59",
  "pydantic>=2.0",
]

[project.scripts]
appv23 = "appv23.cli:main"
v23 = "appv23.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["appv23*"]

[tool.setuptools.package-data]
"appv23.coding_agent" = ["export_html_assets/vendor/*.js"]
